--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -102,7 +102,7 @@
                   <mat-icon matSuffix>description</mat-icon>
                   <mat-hint>Pole jest wymagane do prawidłowego funkcjonowania aplikacji.</mat-hint>
                   <mat-error *ngIf="form.controls['name'].hasError('required')">Nazwa wspólnoty jest wymagana.</mat-error>
-                  <mat-error *ngIf="form.controls['name'].hasError('minlength')">Pole musi mieć minimum 4 znaki.</mat-error>
+                  <mat-error *ngIf="form.controls['name'].hasError('minlength')">Pole musi mieć minimum 5 znaków.</mat-error>
                 </mat-form-field>
               </div>
             </div>
@@ -119,7 +119,7 @@
                   <mat-icon matSuffix>description</mat-icon>
                   <mat-hint>Pole jest wymagane do prawidłowego funkcjonowania aplikacji.</mat-hint>
                   <mat-error *ngIf="form.controls['address'].hasError('required')">Adres wspólnoty jest wymagany.</mat-error>
-                  <mat-error *ngIf="form.controls['address'].hasError('minlength')">Pole musi mieć minimum 4 znaki.</mat-error>
+                  <mat-error *ngIf="form.controls['address'].hasError('minlength')">Pole musi mieć minimum 5 znaków.</mat-error>
                 </mat-form-field>
               </div>
             </div>
@@ -138,7 +138,7 @@
                   <mat-icon matSuffix>description</mat-icon>
                   <mat-hint>Pole jest wymagane do prawidłowego funkcjonowania aplikacji.</mat-hint>
                   <mat-error *ngIf="form.controls['city'].hasError('required')">Miasto wspólnoty jest wymagane.</mat-error>
-                  <mat-error *ngIf="form.controls['city'].hasError('minlength')">Pole musi mieć minimum 4 znaki.</mat-error>
+                  <mat-error *ngIf="form.controls['city'].hasError('minlength')">Pole musi mieć minimum 3 znaki.</mat-error>
                 </mat-form-field>
               </div>
             </div>
